# ProgrammingAssignment5Open-MP

./: .gitignore  CMakeLists.txt
data/: Sequential_Solve_Heat_Equation.csv  sequential_solve_transient_profile_1_at_0.00.csv  sequential_solve_transient_profile_2_at_170.00.csv  sequential_solve_transient_profile_3_at_340.00.csv  sequential_solve_transient_profile_4_at_510.00.csv  sequential_solve_transient_profile_5_at_680.00.csv
data/transient_par/: parallel_solve_transient_profile_10_at_850.00s.csv  parallel_solve_transient_profile_2_at_94.44s.csv  parallel_solve_transient_profile_5_at_377.78s.csv  parallel_solve_transient_profile_7_at_566.67s.csv  parallel_solve_transient_profile_9_at_755.56s.csv
data/transient_seq/: sequential_solve_transient_profile_1_at_0.00s.csv  sequential_solve_transient_profile_3_at_188.89s.csv  sequential_solve_transient_profile_4_at_283.33s.csv  sequential_solve_transient_profile_6_at_472.22s.csv  sequential_solve_transient_profile_8_at_661.11s.csv
include/: functions.h
src/: functions.c  main.c  main_colab.c
